# Colors_and_Face_Tracker

./: Instructions_developpeur.html  README.md
suivis_couleurs/: CMakeLists.txt  couleuravecwebv4.cpp  main  servo.cpp
suivis_visage/dlib-projet/info_dlib/: README.md
suivis_visage/dlib-projet/projet_polo_benito/: CMakeLists.txt  copier fichier shape predictor dans le dossier build  visageandfiltres.cpp
